// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CButtonToolbar renders correctly 1`] = `
<div
  aria-label="toolbar"
  class="btn-toolbar"
  role="toolbar"
/>
`;

exports[`CButtonToolbar renders correctly 2`] = `
<div
  aria-label="toolbar"
  class="btn-toolbar justify-content-between"
  role="toolbar"
>
  <template>
    Custom button toolbar
  </template>
</div>
`;
